--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  color: #272d38;
+  color: black;
   font-family: Inter;
 }
 
@@ -74,7 +74,7 @@ section#hero > div > div {
 }
 
 section#hero > div > img {
-  height: 140%;
+  height: 100%;
 }
 
 section#hero > div > div > h2 {
@@ -90,4 +90,29 @@ section#hero > div > div > p {
   font-size: 16px;
   color: #272d38;
   line-height: 1.5;
+}
+
+section#brands-logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 56px 0;
+}
+
+section#brands-logo > p {
+  color: #667085;
+  font-size: 12px;
+}
+
+section#brands-logo > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 180px;
+  background-color: #f6f6f6;
+  padding: 32px;
+  border-radius: 16px;
 }
